# carereport

./: README.md  carereport.cfg  pyproject.toml  requirements.txt  run_care.py
doc/source/: api.rst  conf.py  index.rst  medical.rst  patient.rst
src/carereport/: __init__.py
src/carereport/models/: medical.py  patient.py  script_intake.py
src/carereport/views/: care_app.py  diet_views.py  dietheader.py  dietheader.ui  dietline.py  dietline.ui  formhandle.py  formhandle.ui  helpers.py  intake_views.py  mainwindow.py  mainwindow.ui  patient_views.py  patientdialog.py  patientdialog.ui  patientsearch.py  patientsearch.ui  plaintextext.py  script_intake.py  scripts_diet.py  scripts_patient.py  widgetext.py
tests/: test_diet_input.py  test_diet_views.py  test_intake_views.py  test_medical.py  test_patient.py  test_patient_input.py  test_patient_views.py
