[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carereport"
version = "0.0.1"
authors = [
    { name="Menno Hölscher", email="mennoholscher@gmail.com" },
    ]
description = "An application for administrating health care"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    ]

[project.urls]
"Homepage" = "https://github.com/mholscher/carereport"
